# krokodil

./: .gitignore  Cargo.toml  LICENSE  Makefile  Procfile  README.md  package.json
src/: errors.rs  games.rs  main.rs
ui/: package-lock.json  package.json  rollup.config.js  tsconfig.json
ui/src/: board.ts  db.ts  main.tsx
ui/src/components/: App.css  App.tsx  ColorButton.css  ColorButton.tsx  ColorPicker.css  ColorPicker.tsx  GuessWord.css  GuessWord.tsx  LineWidthButton.css  LineWidthButton.tsx  LineWidthPicker.css  LineWidthPicker.tsx  PickWord.css  PickWord.tsx  ShareGame.css  ShareGame.tsx  Spinner.css  Spinner.tsx
ui/src/util/: ws.ts
ui/static/: game.html  index.css  index.html
