[package]
name = "krokodil"
version = "0.1.0"
authors = ["Roman Zaynetdinov <roman@zaynetro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
futures = "0.3"
warp = { version = "0.2", features = ["compression"] }
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }
